--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Main</title>
-  <script src="main.js"></script>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Main</title>
+  </head>
 
-<body>
-  <div id="myapp"></div>
-  <script>
-  var app = Elm.Main.init({
-    node: document.getElementById('myapp')
-  });
-  </script>
-</body>
+  <body>
+    <div id="root" />
+    <script src="./dist/index.js"></script>
+  </body>
 </html>
