--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 
   <body>
     <div id="root" />
-    <script src="./dist/index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
